[package]
name = "bytes-related"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1.23.0", features = ["full"]}
log = "0.4.17"
anyhow = "1.0.68"
custom-utils = "0.10.12"
bytes = "1.3.0"